# bg_control

./: .gitignore  CNAME  Onboarding.md  README.md  eda_Suhani_Didwania.ipynb  eda_gavin_katz.ipynb  references.md
0_meal_identification/meal_identification/: Makefile  README.md  custom_pip_install.py  environment-ci.yml  environment.yml  pyproject.toml
0_meal_identification/meal_identification/docs/: mkdocs.yml
0_meal_identification/meal_identification/meal_identification/: DatasetGenerator.py  __init__.py  config.py  dataset.py  features.py  plots.py
0_meal_identification/meal_identification/notebooks/: 0.00-Initials-data-exploration-template.ipynb  1.00-initials-data-cleaning-template.ipynb  1.01-cjr-change-point-index-creator.ipynb  1.01-jg-GMMHMM-implementation.ipynb  1.01b-cjr-change-point-index-creator.ipynb  1.02-ay-change-point-index-creator-to-source-code.ipynb  1.02-vr-ggs-data-preprocessing.ipynb  1.03-ay-eagglo-explore.ipynb  1.03-vr-data-loading.ipynb  1.04-cr-simulated-data-generation.ipynb  1.04-tc-change-point-plot.ipynb  1.04-tc-simulated-date.ipynb  2.00-initials-visualizations-template.ipynb  2.01-tc-change-point-plot.ipynb  2.02-tc-simulated-date.ipynb  2.03-cjr-meal-time-histogram-creator.ipynb  3.00-initials-modeling-template.ipynb  3.01-cjr-clasp-annotation-modeling.ipynb  3.01-tc-time-series-gaussian-hmm.ipynb  3.02-ay-time-series-forest-classifier.ipynb  3.02-vr-time-series-gaussian-segmentation.ipynb  3.03-vr-time-series-gaussian-segmentation.ipynb  3.04-vr-model-looping.ipynb  3.04-vr-sktime-annotators-comparison.py  3.05-jz-sublof.ipynb  (+14 more)
(+1198 files in other folders)
